moved 'latin_proportional' to 'latin_proportional1'.

--- a/scripts/target-Makefile.1.tmpl
+++ b/scripts/target-Makefile.1.tmpl
@@ -1,5 +1,5 @@
-#Mplus-1P#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-1p/;s/%%FAMILY%%/m+-1p/;s/%%MODULE_LATIN%%/latin_proportional/;s/%%MODULES_KANA%%/hiragana1 katakana1 miscellaneous1/
-#Mplus-2P#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-2p/;s/%%FAMILY%%/m+-2p/;s/%%MODULE_LATIN%%/latin_proportional/;s/%%MODULES_KANA%%/hiragana2 katakana2 miscellaneous2/
+#Mplus-1P#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-1p/;s/%%FAMILY%%/m+-1p/;s/%%MODULE_LATIN%%/latin_proportional1/;s/%%MODULES_KANA%%/hiragana1 katakana1 miscellaneous1/
+#Mplus-2P#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-2p/;s/%%FAMILY%%/m+-2p/;s/%%MODULE_LATIN%%/latin_proportional1/;s/%%MODULES_KANA%%/hiragana2 katakana2 miscellaneous2/
 #Mplus-1M#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-1m/;s/%%FAMILY%%/m+-1m/;s/%%MODULE_LATIN%%/latin_monospaced/;s/%%MODULES_KANA%%/hiragana1 katakana1 miscellaneous1/
 #Mplus-2M#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-2m/;s/%%FAMILY%%/m+-2m/;s/%%MODULE_LATIN%%/latin_monospaced/;s/%%MODULES_KANA%%/hiragana2 katakana2 miscellaneous2/
 
