--- a/scripts/target-Makefile.1.tmpl
+++ b/scripts/target-Makefile.1.tmpl
@@ -1,7 +1,9 @@
 #Mplus-1P#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-1p/;s/%%FAMILY%%/m+-1p/;s/%%MODULES_LATIN%%/latin_proportional1/;s/%%MODULES_KANA%%/hiragana1 katakana1 miscellaneous1/
 #Mplus-2P#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-2p/;s/%%FAMILY%%/m+-2p/;s/%%MODULES_LATIN%%/latin_proportional1 latin_proportional2/;s/%%MODULES_KANA%%/hiragana2 katakana2 miscellaneous2/
-#Mplus-1M#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-1m/;s/%%FAMILY%%/m+-1m/;s/%%MODULES_LATIN%%/latin_monospaced/;s/%%MODULES_KANA%%/hiragana1 katakana1 miscellaneous1/
-#Mplus-2M#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-2m/;s/%%FAMILY%%/m+-2m/;s/%%MODULES_LATIN%%/latin_monospaced/;s/%%MODULES_KANA%%/hiragana2 katakana2 miscellaneous2/
+#Mplus-1C#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-1c/;s/%%FAMILY%%/m+-1c/;s/%%MODULES_LATIN%%/latin_clear1/;s/%%MODULES_KANA%%/hiragana1 katakana1 miscellaneous1/
+#Mplus-2C#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-2c/;s/%%FAMILY%%/m+-2c/;s/%%MODULES_LATIN%%/latin_clear2/;s/%%MODULES_KANA%%/hiragana2 katakana2 miscellaneous2/
+#Mplus-1M#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-1m/;s/%%FAMILY%%/m+-1m/;s/%%MODULES_LATIN%%/latin_monospace1/;s/%%MODULES_KANA%%/hiragana1 katakana1 miscellaneous1/
+#Mplus-2M#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-2m/;s/%%FAMILY%%/m+-2m/;s/%%MODULES_LATIN%%/latin_monospace2/;s/%%MODULES_KANA%%/hiragana2 katakana2 miscellaneous2/
 
 TEMPLATE=	../../../scripts/target-Makefile.2.tmpl
 SUBDIRS=	black heavy bold medium regular light thin
