*** empty log message ***

--- a/scripts/set_fontnames.tmpl
+++ b/scripts/set_fontnames.tmpl
@@ -5,7 +5,7 @@ year   = "2006"
 version = "1.012"
 
 fontname = fontname_base + "-" + weight
-copyright = "Copyright(c) " + year + " M+ Font Project"
+copyright = "Copyright(c) " + year + " M+ FONTS PROJECT"
 
 fullname_lower = family + "-" + weight
 fullname = ""; i = 0; len = Strlen(fullname_lower); while (i < len)
