--- a/scripts/target-Makefile.1s.tmpl
+++ b/scripts/target-Makefile.1s.tmpl
@@ -1,7 +1,7 @@
-#Mplus-1M#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-1m/;s/%%FAMILY%%/m+-1m/;s/%%MODULES_LATIN%%/latin_monospace1/;s/%%MODULES_KANA%%/hiragana1 katakana1 miscellaneous1/
-#Mplus-2M#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-2m/;s/%%FAMILY%%/m+-2m/;s/%%MODULES_LATIN%%/latin_monospace1 latin_monospace2/;s/%%MODULES_KANA%%/hiragana2 katakana2 miscellaneous2/
-#Mplus-1mN#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-1mn/;s/%%FAMILY%%/m+-1mn/;s/%%MODULES_LATIN%%/latin_mono_new1/;s/%%MODULES_KANA%%/hiragana1 katakana1 miscellaneous1/
-#Mplus-2mN#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-2mn/;s/%%FAMILY%%/m+-2m/;s/%%MODULES_LATIN%%/latin_mono_new1 latin_mono_new2/;s/%%MODULES_KANA%%/hiragana2 katakana2 miscellaneous2/
+#Mplus-1M#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-1m/;s/%%FAMILY%%/m+-1m/;s/%%MODULES_LATIN%%/latin_monospace1/;s/%%MODULES_KANA%%/hiragana1 katakana1 miscellaneous1 latin_fullwidth1 latin_full_clear1/
+#Mplus-2M#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-2m/;s/%%FAMILY%%/m+-2m/;s/%%MODULES_LATIN%%/latin_monospace1 latin_monospace2/;s/%%MODULES_KANA%%/hiragana2 katakana2 miscellaneous2 latin_full_clear1 latin_full_clear2/
+#Mplus-1mN#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-1mn/;s/%%FAMILY%%/m+-1mn/;s/%%MODULES_LATIN%%/latin_mono_new1/;s/%%MODULES_KANA%%/hiragana1 katakana1 miscellaneous1 latin_full_clear1/
+#Mplus-2mN#COMMON_SUBST=	s/%%FONTNAME_BASE%%/mplus-2mn/;s/%%FAMILY%%/m+-2m/;s/%%MODULES_LATIN%%/latin_mono_new1/;s/%%MODULES_KANA%%/hiragana2 katakana2 miscellaneous2 latin_full_clear1 latin_full_clear2/
 
 # black and heavy is missing
 TEMPLATE=	../../../scripts/target-Makefile.2.tmpl
