bsdmake 依存の Makefile の条件分岐の書き方を使っていたので、 GNU make の表記法に改めた。

--- a/scripts/target-Makefile.1.tmpl
+++ b/scripts/target-Makefile.1.tmpl
@@ -11,7 +11,7 @@ MAKEFILES=	black/Makefile heavy/Makefile bold/Makefile medium/Makefile \
 all:: $(MAKEFILES)
 	for i in $(SUBDIRS) ;\
 	do \
-	(cd $$i && make) ;\
+	(cd $$i && $(MAKE)) ;\
 	done
 
 black/Makefile: ${TEMPLATE}
