--- a/scripts/target-Makefile.1s.tmpl
+++ b/scripts/target-Makefile.1s.tmpl
@@ -31,4 +31,5 @@ thin/Makefile: ${TEMPLATE}
 
 clean:
 	rm -f *~
-	rm -f */*.ttf */build-ttf.pe */set_bearings */set_kernings */set_fontnames */tmp.sfd
+	rm -f */*.ttf */build-ttf.pe */tmp.sfd
+	rm -f */set_bearings */set_kernings */set_fontnames */set_ligatures */*.fea
