--- a/scripts/target-Makefile.2.tmpl
+++ b/scripts/target-Makefile.2.tmpl
@@ -5,7 +5,8 @@ MODULES_LATIN:=	%%MODULES_LATIN%%
 
 WEIGHT:=	%%WEIGHT%%
 
-SCRIPTS=	set_bearings set_kernings set_fontnames set_instructions
+SCRIPTS=	set_bearings set_kernings set_fontnames set_ligatures set_instructions
+SCRIPTS+=	ligature01.fea
 MODULES=	$(MODULES_KANA) $(MODULES_LATIN)
 ifdef MPLUS_FULLSET
 MODULES+=	kanji
@@ -23,6 +24,12 @@ set_kernings: ../../../../svg.d/latin_proportional1/kernings
 build-ttf.pe: ../../../../scripts/build-ttf.pe
 	ln -s ../../../../scripts/build-ttf.pe $@
 
+set_ligatures: ../../../../scripts/set_ligatures
+	ln -s ../../../../scripts/set_ligatures $@
+
+ligature01.fea: ../../../../scripts/ligature01.fea
+	ln -s ../../../../scripts/ligature01.fea $@
+
 set_instructions: ../../../../scripts/set_instructions
 	ln -s ../../../../scripts/set_instructions $@
 
@@ -30,4 +37,5 @@ set_fontnames: ../../../../scripts/set_fontnames.tmpl
 	sed 's/%Fnbase%/${FONTNAME_BASE}/;s/%Family%/${FAMILY}/g;s/%Weight%/${WEIGHT}/g' ../../../../scripts/set_fontnames.tmpl > $@
 
 clean:
-	rm -f *~ *.ttf build-ttf.pe set_bearings set_kernings set_fontnames tmp.sfd
+	rm -f *~ *.ttf build-ttf.pe tmp.sfd
+	rm -f set_bearings set_kernings set_fontnames set_ligatures set_instructions *.fea
