*** empty log message ***

--- a/scripts/target-Makefile.2.tmpl
+++ b/scripts/target-Makefile.2.tmpl
@@ -4,10 +4,10 @@ MODULES_KANA:=	%%MODULES_KANA%%
 MODULES_LATIN:=	%%MODULES_LATIN%%
 ALTERNATIVE_BASE:=	%%ALTERNATIVE_BASE%%
 MODULES_ALT:=	%%MODULES_ALT%%
-ifdef MPLUS_FULLSET
-MODULES=	$(MODULES_ALT) $(MODULES_KANA) $(MODULES_LATIN) kanji
-else
-MODULES=	$(MODULES_KANA) $(MODULES_LATIN)
+ifdef MPLUS_FULLSET 
+MODULES= $(MODULES_KANA) $(MODULES_ALT) $(MODULES_LATIN) kanji
+else 
+MODULES= $(MODULES_KANA) $(MODULES_ALT) $(MODULES_LATIN) 
 endif
 
 WEIGHT:=	%%WEIGHT%%
