--- a/scripts/set_fontnames.tmpl
+++ b/scripts/set_fontnames.tmpl
@@ -21,9 +21,10 @@ i++; endloop
 
 SetFontNames(fontname, family, fullname, weight, copyright, version)
 SetOS2Value("VendorID", "M+  ")
-SetTTFName(0x409, 1, Strsub(fullname, 0, Strlen(family)));
-SetTTFName(0x409, 2, weight);
+SetTTFName(0x409, 1, Strsub(fullname, 0, Strlen(family)) + " " + weight);
 SetTTFName(0x409, 11, "http://mplus-fonts.sourceforge.jp");
+SetTTFName(0x409, 16, Strsub(fullname, 0, Strlen(family)));
+SetTTFName(0x409, 17, weight);
 
 panose = [2, 11, 0, 2, 2, 2, 3, 2, 2, 7]
 SetOS2Value("IBMFamily", 8 * 256 + 6)
@@ -33,31 +34,39 @@ if (weight == "black")
 #	SetOS2Value("fsSelection", 0x20)
 #	SetOS2Value("usWeightClass", 900)
 	SetMacStyle("Bold")
+	SetTTFName(0x409, 2, "Bold");
 elseif (weight == "heavy")
 	panose[2] = 8;  panose[3] = 2
 #	SetOS2Value("usWeightClass", 800)
 #	SetOS2Value("fsSelection", 0x20)
 	SetMacStyle("Bold")
+	SetTTFName(0x409, 2, "Bold");
 elseif (weight == "bold")
 	panose[2] = 7;  panose[3] = 2
 #	SetOS2Value("usWeightClass", 700)
 #	SetOS2Value("fsSelection", 0x20)
 	SetMacStyle("Bold")
+	SetTTFName(0x409, 2, "Bold");
 elseif (weight == "medium")
 	panose[2] = 6;  panose[3] = 2
 #	SetOS2Value("usWeightClass", 500)
+	SetTTFName(0x409, 2, "Regular");
 elseif (weight == "regular")
 	panose[2] = 5;  panose[3] = 2
 #	SetOS2Value("usWeightClass", 400)
 #	SetOS2Value("fsSelection", 0x02)
+	SetTTFName(0x409, 2, "Regular");
 elseif (weight == "light")
 	panose[2] = 4;  panose[3] = 3
 #	SetOS2Value("usWeightClass", 300)
+	SetTTFName(0x409, 2, "Regular");
 elseif (weight == "thin")
 	panose[2] = 3;  panose[3] = 3
 #	SetOS2Value("usWeightClass", 100)
+	SetTTFName(0x409, 2, "Regular");
 else
 	panose[2] = 0;  panose[3] = 0
+	SetTTFName(0x409, 2, "Regular");
 endif
 
 c = Strsub(family, Strlen(family)-1); if (c == "M" || c == 'm')
