--- a/scripts/set_fontnames.tmpl
+++ b/scripts/set_fontnames.tmpl
@@ -75,3 +75,13 @@ c = Strsub(family, Strlen(family)-1); if (c == "M" || c == 'm')
 endif
 
 SetPanose(panose)
+
+SetOS2Value("WinAscentIsOffset"   , 0)
+SetOS2Value("WinDescentIsOffset"  , 0)
+SetOS2Value("HHeadAscentIsOffset" , 0)
+SetOS2Value("HHeadDescentIsOffset", 0)
+SetOS2Value("WinAscent"   , 1075)
+SetOS2Value("WinDescent"  ,  320)
+SetOS2Value("HHeadAscent" , 1075)
+SetOS2Value("HHeadDescent", -320)
+SetOS2Value("HHeadLineGap",   90)
