--- a/scripts/target-Makefile.2.tmpl
+++ b/scripts/target-Makefile.2.tmpl
@@ -4,7 +4,7 @@ MODULES_KANA:=	%%MODULES_KANA%%
 MODULES_LATIN:=	%%MODULES_LATIN%%
 ALTERNATIVE_BASE:=	%%ALTERNATIVE_BASE%%
 MODULES_ALT:=	%%MODULES_ALT%%
-ifdef MPLUS_FULLSET 
+ifdef MPLUS_FULLSET
 MODULES= $(MODULES_KANA) $(MODULES_ALT) $(MODULES_LATIN) kanji
 else 
 MODULES= $(MODULES_KANA) $(MODULES_ALT) $(MODULES_LATIN) 
@@ -13,10 +13,10 @@ endif
 WEIGHT:=	%%WEIGHT%%
 
 SCRIPTS=	set_bearings set_kernings set_fontnames set_ligatures set_vert_chars set_instructions set_ccmp
-SCRIPTS+=	ligature01.fea ccmp01.fea
+SCRIPTS+=	ligature01.fea ccmp01.fea ccmp02.fea
 
 ${FONTNAME_BASE}-${WEIGHT}.ttf: build-ttf.pe $(SCRIPTS)
-	fontforge -script build-ttf.pe $@ $(MODULES)
+	fontforge build-ttf.pe $@ $(MODULES)
 
 set_bearings: ../../../../svg.d/latin_proportional1/bearings
 	perl ../../../../scripts/split-bearing.pl ${WEIGHT} $(MODULES) > $@
@@ -43,11 +43,14 @@ set_fontnames: ../../../../scripts/set_fontnames.tmpl
 	sed 's/%Fnbase%/${FONTNAME_BASE}/;s/%Family%/${FAMILY}/g;s/%Weight%/${WEIGHT}/g' ../../../../scripts/set_fontnames.tmpl > $@
 
 ccmp01.fea: ../../../../scripts/ccmp01.fea
-	ln -s ../../../../scripts/ccmp01.fea $@
+	ln -s ../../../../scripts/$@ $@
+
+ccmp02.fea: ../../../../scripts/ccmp02.fea
+	ln -s ../../../../scripts/$@ $@
 
 set_ccmp: ../../../../scripts/set_ccmp
 	ln -s ../../../../scripts/set_ccmp $@
 
 clean:
-	rm -f *~ *.ttf build-ttf.pe tmp.sfd
+	rm -f *~ *.ttf build-ttf.pe *.sfd
 	rm -f set_bearings set_kernings set_fontnames set_ligatures set_instructions set_ccmp *.fea
