fonts are generated from template .sfd file.

--- a/scripts/target-Makefile.2.tmpl
+++ b/scripts/target-Makefile.2.tmpl
@@ -27,6 +27,9 @@ set_kernings: ../../../../svg.d/latin_proportional1/kernings
 build-ttf.pe: ../../../../scripts/build-ttf.pe
 	ln -s ../../../../scripts/build-ttf.pe $@
 
+mplus.sfd: ../../../../scripts/mplus.sfd
+	ln -s ../../../../scripts/mplus.sfd $@
+
 set_ligatures: ../../../../scripts/set_ligatures
 	ln -s ../../../../scripts/set_ligatures $@
 
