--- a/scripts/target-Makefile.2.tmpl
+++ b/scripts/target-Makefile.2.tmpl
@@ -13,7 +13,7 @@ endif
 WEIGHT:=	%%WEIGHT%%
 
 SCRIPTS=	set_bearings set_kernings set_fontnames set_ligatures set_vert_chars set_instructions set_ccmp
-SCRIPTS+=	ligature01.fea ccmp01.fea
+SCRIPTS+=	ligature01.fea ccmp01.fea ccmp02.fea mark01.fea mplus.sfd
 
 ${FONTNAME_BASE}-${WEIGHT}.ttf: build-ttf.pe $(SCRIPTS)
 	fontforge -script build-ttf.pe $@ $(MODULES)
